// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFeedback can have a feedback state 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0 {
  border-radius: 4px;
  background-color: #f7f7f8;
}

<div
  className="c0 sc-bwzfXH c0 c1"
  role={null}
>
  Some feedback text.
</div>
`;

exports[`InputFeedback can have a feedback state 2`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0 {
  border-radius: 4px;
  background-color: #f4f9f2;
}

<div
  className="c0 sc-bwzfXH c0 c1"
  role={null}
>
  Some feedback text.
</div>
`;

exports[`InputFeedback renders 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0 {
  border-radius: 4px;
  background-color: #f7f7f8;
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  Some inputFeedback text.
</div>
`;
